<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:id="@+id/list_item">
    <TextView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="@string/title_view"/>
    <TextView
        android:id="@+id/body_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="@string/body_view"
        android:maxLines="3"
        android:layout_below="@id/title_view"/>
    <TextView
        android:id="@+id/date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="italic"
        tools:text="@string/date_view"
        android:layout_alignParentEnd="true"/>
    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/body_view"
        android:textSize="12sp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:text="@string/update" />
    <TextView
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/body_view"
        android:text="@string/delete"
        android:textColor="@android:color/holo_red_light"
        android:textSize="12sp"/>
</RelativeLayout>